[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ensemble-weights"
version = "0.1.0"
description = "Dynamic model weighting via KNN"
authors = [{name = "Tikhon Vodyanov", email = "tikavod6@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/TikaaVo/Ensemble-weights"
Repository = "https://github.com/TikaaVo/Ensemble-weights.git"