[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "despys"
version = "0.1.0"
description = "Dynamic model weighting"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]

[project.urls]
Homepage = "https://github.com/TikaaVo/Ensemble-weights"
Repository = "https://github.com/TikaaVo/Ensemble-weights.git"